--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./
-          file: "./docker/${TAG_NAME}/Dockerfile"
+          file: "./docker/${{env.TAG_NAME}}/Dockerfile"
           push: true
           tags: "${{env.BUILDKIT_IMAGE}}:${{env.TAG_NAME}}"
