--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
         type: string
 
 env:
-  TAG_NAME: latest
+  #TAG_NAME: latest
   BUILDKIT_IMAGE: jkaninda/laravel-php-fpm
 jobs:
   docker:
@@ -22,10 +22,12 @@ jobs:
         run: |
           set -x
           if [[ ${{ inputs.docker_tag }} == 'latest' ]]; then
-            TAG_NAME=8.1
+            echo "TAG_NAME=8.1" >> "$GITHUB_ENV"
             echo "Build latest tag'"
           else
-            TAG_NAME=${{ inputs.docker_tag }}
+            echo "TAG_NAME=${{ inputs.docker_tag }}" >> "$GITHUB_ENV"
+            echo "Build from tag folder'"
+
           fi
       - 
         name: Set up QEMU
