--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./
-          file: "./docker/${{env.TAG_NAME}}/Dockerfile"
+          file: ./docker/${{env.TAG_NAME}}/Dockerfile
           push: true
           tags: "${{env.BUILDKIT_IMAGE}}:${{env.TAG_NAME}}"
