--- a/.github/workflows/buil-amd64.yml
+++ b/.github/workflows/buil-amd64.yml
@@ -34,4 +34,4 @@ jobs:
           context: .
           file: ./docker/amd64/8.1/Dockerfile
           push: true
-          tags: "${{env.BUILDKIT_IMAGE}}:${{env.TAG_NAME}}"
+          tags: "${{env.BUILDKIT_IMAGE}}:8.1-test"
