--- a/.github/workflows/buil-amd64.yml
+++ b/.github/workflows/buil-amd64.yml
@@ -31,7 +31,7 @@ jobs:
         name: Build and push 8.1
         uses: docker/build-push-action@v3
         with:
-          context: .
-          dockerfile: "./docker/amd64/8.1/Dockerfile"
+          #context: .
+          file: "./docker/amd64/8.1/Dockerfile"
           push: true
           tags: "${{env.BUILDKIT_IMAGE}}:8.1-test"
