--- a/docker/7.4/Dockerfile
+++ b/docker/7.4/Dockerfile
@@ -3,6 +3,8 @@ ARG WORKDIR=/var/www/html
 ENV DOCUMENT_ROOT=${WORKDIR}
 ENV LARAVEL_PROCS_NUMBER=1
 ENV NODE_VERSION=16.x
+ARG HOST_UID=1000
+ENV USER=www-data
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     git \
@@ -82,8 +84,8 @@ ENTRYPOINT ["entrypoint.sh"]
 
 
 
-RUN usermod -u 1000 www-data
-RUN groupmod -g 1000 www-data
+RUN usermod -u ${HOST_UID} www-data
+RUN groupmod -g ${HOST_UID} www-data
 
 RUN chmod -R 755 $WORKDIR
 RUN chown -R www-data:www-data $WORKDIR
