--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: amd64-build
+name: Docker-build
 on:
   push:
     branches:
@@ -49,4 +49,6 @@ jobs:
         with:
           file: "./docker/8.2/Dockerfile"
           push: true
-          tags: "${{env.BUILDKIT_IMAGE}}:8.2"
+          tags: |
+           "${{env.BUILDKIT_IMAGE}}:8.2"
+           "${{env.BUILDKIT_IMAGE}}:latest"
